--- a/style.css
+++ b/style.css
@@ -10,3 +10,19 @@ background-color: #E7E7E7;
 .space_top{
 	margin-top: 1%;
 }
+
+.span_radio{
+	margin-left: 10%;
+}
+
+small {
+	color: red;
+}
+
+.margin_big{
+	margin-top: 15%;
+}
+
+a:link {
+	text-decoration: none;
+}
